# halo2_sha256

./: Cargo.toml  LICENSE
benches/: digest.rs
examples/: main.rs
src/: lib.rs  sha256.rs  table16.rs
src/table16/: compression.rs
