[package]
name = "halo2_sha256"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2 = {git = "https://github.com/zcash/halo2.git", branch="fix-sha256"}

[dev-dependencies]
criterion = "0.3"
rand = "0.8.4"

[[bench]]
name = "digest"
harness = false
